test/classes/errors/nilability-assign/assign-oknil-owned-from-oknil-unmanaged.good
assign-oknil-owned-from-oknil-unmanaged.chpl:8: error: Cannot assign to owned MyClass? from unmanaged MyClass?
